--- a/_config.yml
+++ b/_config.yml
@@ -6,3 +6,5 @@ permalink: /:title
 markdown: redcarpet
 redcarpet:
   extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
+gems:
+- jekyll-sitemap
