--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ destination: ./_site
 plugins:     ./_plugins
 exclude: [bin, CNAME, Gemfile, Gemfile.lock, README.md]
 permalink: /blog/:year/:month/:day/:title.html
-markdown: redcarpet
+markdown: kramdown
 redcarpet:
   extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
 gems:
